Complete crud and upgrade dto usage
