# collaborativeWorkflow/src/DTO/DtoResolver/BoardDtoResolver.php
@@ -1,44 +1,0 @@
-<?php
-
-declare(strict_types=1);
-
-namespace App\DTO\DtoResolver;
-
-use App\DTO\BoardDto;
-use Symfony\Component\HttpFoundation\Request;
-use Symfony\Component\HttpKernel\Controller\ValueResolverInterface;
-use Symfony\Component\HttpKernel\ControllerMetadata\ArgumentMetadata;
-use Symfony\Component\HttpKernel\Exception\BadRequestHttpException;
-use Symfony\Component\Serializer\SerializerInterface;
-use Symfony\Component\Validator\Validator\ValidatorInterface;
-
-class BoardDtoResolver implements ValueResolverInterface
-{
-    public function __construct(
-        private SerializerInterface $serializer,
-        private ValidatorInterface $validator,
-    ) {
-    }
-
-    public function supports(Request $request, ArgumentMetadata $argument): bool
-    {
-        return BoardDto::class === $argument->getType();
-    }
-
-    public function resolve(Request $request, ArgumentMetadata $argument): iterable
-    {
-        $dto = $this->serializer->deserialize($request->getContent(), BoardDto::class, 'json');
-
-        $errors = $this->validator->validate($dto);
-        if (count($errors) > 0) {
-            $messages = [];
-            foreach ($errors as $error) {
-                $messages[$error->getPropertyPath()] = $error->getMessage();
-            }
-
-            throw new BadRequestHttpException(json_encode($messages));
-        }
-
-        yield $dto;
-    }
-}
